--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </section>
 
   <!-- Content Section (Main + Sidebar) -->
-  <div class="flex flex-col lg:flex-row p-4 gap-6 lg:items-stretch">
+  <div class="flex flex-col lg:flex-row p-4 gap-6">
 
     <!-- Main Section -->
     <main class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-5 flex-1">
