call history created

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h1 class="text-lg font-bold">Emergency Service</h1>
     </div>
     <div class="flex items-center gap-4">
-      <button class="bg-[#41FF6B1A]  text-black px-3 py-1 rounded-full flex gap-2 font-bold items-center"><span id="hartCount" >0</span><img src="./assets/heart.png " class="h-5 w-5"  alt=""></button>
+      <button class="bg-[#41FF6B1A]  text-black px-3 py-1 rounded-full flex gap-2 font-bold items-center"><span id="heartCount" >0</span><img src="./assets/heart.png " class="h-5 w-5"  alt=""></button>
       <button class="bg-[#41FF6B1A]  text-black px-3 py-1 rounded-full flex gap-2 font-bold  items-center "><span id="coinCount">100</span><img src="./assets/coin.png " class="h-5 w-5 "  alt=""></button>
       <button class="bg-green-500 text-white px-3 py-1 rounded-full flex gap-2 font-bold items-center"> <span>0</span>Copy</button>
     </div>
@@ -56,22 +56,22 @@
 
   <!-- Title + Subtitle -->
   <div class="mt-2">
-    <h3 class="  ServiceName font-bold text-gray-800"> National ID Helpline</h3>
+    <h3 class="  serviceName font-bold text-gray-800"> National ID Helpline</h3>
     <p class="text-sm text-gray-500"> National ID Helpline</p>
   </div>
 
   <!-- Emergency Number -->
-  <p class="  ServiceNumver text-3xl font-bold text-gray-900 mt-6">999</p>
+  <p class="  serviceNumber text-3xl font-bold text-gray-900 mt-6">999</p>
 
   <!-- Tag -->
   <span class="bg-gray-100 text-gray-600 text-2  py-2  rounded-full mt-2 w-[70px] p-6 ">All</span>
 
   <!-- Buttons -->
   <div class="flex gap-4 mt-10">
-    <button class="flex-1 border border-gray-300 rounded-lg py-2 text-gray-700 hover:bg-gray-100">
+    <button class="flex-1 border border-gray-300 rounded-lg py-2 text-gray-700 hover:bg-gray-100 copyBtn">
       <i class="fa-solid fa-copy"></i> Copy</button>
-    <button class="flex-1 bg-green-500 hover:bg-green-600 text-white rounded-lg py-2">
-      <i class="fa-solid fa-phone callBtn"></i>Call
+    <button class="flex-1 bg-green-500 hover:bg-green-600 text-white rounded-lg py-2  flex items-center justify-center gap-2 callBtn">
+      <i class="fa-solid fa-phone "></i>Call
     </button>
   </div>
   </div>
@@ -89,23 +89,23 @@
 
   <!-- Title + Subtitle -->
   <div class="mt-2">
-    <h3 class="  ServiceName font-bold text-gray-800">Fire Service Number</h3>
+    <h3 class="  serviceName font-bold text-gray-800">Fire Service Number</h3>
     <p class="text-sm text-gray-500">Fire Service</p>
   </div>
 
   <!-- Emergency Number -->
-  <p class="  ServiceNumber text-3xl font-bold text-gray-900 mt-6">999</p>
+  <p class="  serviceNumber text-3xl font-bold text-gray-900 mt-6">999</p>
 
   <!-- Tag -->
   <span class="bg-gray-100 text-gray-600 text-xl  py-2  rounded-full mt-2 w-20 p-6 ">Fire</span>
 
   <!-- Buttons -->
   <div class="flex gap-4 mt-10">
-    <button class="flex-1 border border-gray-300 rounded-lg py-2 text-gray-700 hover:bg-gray-100">
+    <button class="flex-1 border border-gray-300 rounded-lg py-2 text-gray-700 hover:bg-gray-100 copyBtn">
       <i class="fa-solid fa-copy"></i> Copy
     </button>
-    <button class="flex-1 bg-green-500 hover:bg-green-600 text-white rounded-lg py-2">
-      <i class="fa-solid fa-phone callBtn"></i>Call
+    <button class="flex-1 bg-green-500 hover:bg-green-600 text-white rounded-lg py-2 flex items-center justify-center gap-2 callBtn">
+      <i class="fa-solid fa-phone "></i>Call
     </button>
   </div>
   </div>
@@ -121,23 +121,23 @@
 
   <!-- Title + Subtitle -->
   <div class="mt-2">
-    <h3 class="  ServiceName font-bold text-gray-800">Police Helpline Number</h3>
+    <h3 class="  serviceName font-bold text-gray-800">Police Helpline Number</h3>
     <p class="text-sm text-gray-500">Police</p>
   </div>
 
   <!-- Emergency Number -->
-  <p class="ServiceNumber text-3xl font-bold text-gray-900 mt-6">999</p>
+  <p class="serviceNumber text-3xl font-bold text-gray-900 mt-6">999</p>
 
   <!-- Tag -->
   <span class="bg-gray-100 text-gray-600 text-2  py-2  rounded-full mt-2 w-[85px] p-6 ">Police</span>
 
   <!-- Buttons -->
   <div class="flex gap-4 mt-10">
-    <button class="flex-1 border border-gray-300 rounded-lg py-2 text-gray-700 hover:bg-gray-100">
+    <button class="flex-1 border border-gray-300 rounded-lg py-2 text-gray-700 hover:bg-gray-100 copyBtn">
       <i class="fa-solid fa-copy"></i> Copy
     </button>
-    <button class="flex-1 bg-green-500 hover:bg-green-600 text-white rounded-lg py-2">
-      <i class="fa-solid fa-phone callBtn"></i>Call
+    <button class="flex-1 bg-green-500 hover:bg-green-600 text-white rounded-lg py-2 flex items-center justify-center gap-2 callBtn">
+      <i class="fa-solid fa-phone "></i>Call
     </button>
   </div>
   </div>
@@ -153,23 +153,23 @@
 
   <!-- Title + Subtitle -->
   <div class="mt-2">
-    <h3 class="ServiceName font-bold text-gray-800">Ambulence Service</h3>
+    <h3 class="serviceName font-bold text-gray-800">Ambulence Service</h3>
     <p class="text-sm text-gray-500">Ambulence</p>
   </div>
 
   <!-- Emergency Number -->
-  <p class=" ServiceNumber text-3xl font-bold text-gray-900 mt-6">1994-999999</p>
+  <p class=" serviceNumber text-3xl font-bold text-gray-900 mt-6">1994-999999</p>
 
   <!-- Tag -->
   <span class="bg-gray-100 text-gray-600 text-2  py-2  rounded-full mt-2 w-[100px] p-6 ">Health</span>
 
   <!-- Buttons -->
   <div class="flex gap-4 mt-10">
-    <button class="flex-1 border border-gray-300 rounded-lg py-2 text-gray-700 hover:bg-gray-100">
+    <button class="flex-1 border border-gray-300 rounded-lg py-2 text-gray-700 hover:bg-gray-100 copyBtn">
       <i class="fa-solid fa-copy"></i> Copy
     </button>
-    <button class="flex-1 bg-green-500 hover:bg-green-600 text-white rounded-lg py-2">
-      <i class="fa-solid fa-phone callBtn"></i>Call
+    <button class="flex-1 bg-green-500 hover:bg-green-600 text-white rounded-lg py-2 flex items-center justify-center gap-2 callBtn">
+      <i class="fa-solid fa-phone "></i>Call
     </button>
   </div>
   </div>
@@ -185,23 +185,23 @@
 
   <!-- Title + Subtitle -->
   <div class="mt-2">
-    <h3 class="ServiceName font-bold text-gray-800">Women & Child Helpline</h3>
+    <h3 class="serviceName font-bold text-gray-800">Women & Child Helpline</h3>
     <p class="text-sm text-gray-500">Women & Child Helpline</p>
   </div>
 
   <!-- Emergency Number -->
-  <p class=" ServiceNumbertext-3xl font-bold text-gray-900 mt-6">109</p>
+  <p class=" serviceNumber text-3xl font-bold text-gray-900 mt-6">109</p>
 
   <!-- Tag -->
   <span class="bg-gray-100 text-gray-600 text-2  py-2  rounded-full mt-2 w-20 p-6 ">Help</span>
 
   <!-- Buttons -->
   <div class="flex gap-4 mt-10">
-    <button class="flex-1 border border-gray-300 rounded-lg py-2 text-gray-700 hover:bg-gray-100">
+    <button class="flex-1 border border-gray-300 rounded-lg py-2 text-gray-700 hover:bg-gray-100 copyBtn">
       <i class="fa-solid fa-copy"></i> Copy
     </button>
-    <button class="flex-1 bg-green-500 hover:bg-green-600 text-white rounded-lg py-2">
-      <i class="fa-solid fa-phone callBtn"></i>Call
+    <button class="flex-1 bg-green-500 hover:bg-green-600 text-white rounded-lg py-2 flex items-center justify-center gap-2 callBtn">
+      <i class="fa-solid fa-phone "></i>Call
     </button>
   </div>
   </div>
@@ -217,23 +217,23 @@
 
   <!-- Title + Subtitle -->
   <div class="mt-2">
-    <h3 class=" ServiceName font-bold text-gray-800">Anti-Corruption Helpline </h3>
+    <h3 class=" serviceName font-bold text-gray-800">Anti-Corruption Helpline </h3>
     <p class=" text-sm text-gray-500">Anti-Corruption Helpline</p>
   </div>
 
   <!-- Emergency Number -->
-  <p class=" ServiceNumber text-3xl font-bold text-gray-900 mt-6">106</p>
+  <p class=" serviceNumber text-3xl font-bold text-gray-900 mt-6">106</p>
 
   <!-- Tag -->
   <span class="bg-gray-100 text-gray-600 text-2  py-2  rounded-full mt-2 w-20 p-6 ">Govt.</span>
 
   <!-- Buttons -->
   <div class="flex gap-4 mt-10">
-    <button class="flex-1 border border-gray-300 rounded-lg py-2 text-gray-700 hover:bg-gray-100">
+    <button class="flex-1 border border-gray-300 rounded-lg py-2 text-gray-700 hover:bg-gray-100 copyBtn">
       <i class="fa-solid fa-copy"></i> Copy
     </button>
-    <button class="flex-1 bg-green-500 hover:bg-green-600 text-white rounded-lg py-2">
-      <i class="fa-solid fa-phone callBtn"></i>Call
+    <button class="flex-1 bg-green-500 hover:bg-green-600 text-white rounded-lg py-2 flex items-center justify-center gap-2 callBtn">
+      <i class="fa-solid fa-phone "></i>Call
     </button>
   </div>
   </div>
@@ -249,23 +249,23 @@
 
   <!-- Title + Subtitle -->
   <div class="mt-2">
-    <h3 class=" ServiceName font-bold text-gray-800">Eleectricity Helpline</h3>
+    <h3 class=" serviceName font-bold text-gray-800">Eleectricity Helpline</h3>
     <p class="text-sm text-gray-500">Electricity Outage</p>
   </div>
 
   <!-- Emergency Number -->
-  <p class=" ServiceNumber text-3xl font-bold text-gray-900 mt-6">16216</p>
+  <p class=" serviceNumber text-3xl font-bold text-gray-900 mt-6">16216</p>
 
   <!-- Tag -->
   <span class="bg-gray-100 text-gray-600 text-2  py-2  rounded-full mt-2 w-[109px] p-6 ">Electricity</span>
 
   <!-- Buttons -->
   <div class="flex gap-4 mt-10">
-    <button class="flex-1 border border-gray-300 rounded-lg py-2 text-gray-700 hover:bg-gray-100">
+    <button class="flex-1 border border-gray-300 rounded-lg py-2 text-gray-700 hover:bg-gray-100 copyBtn">
       <i class="fa-solid fa-copy"></i> Copy
     </button>
-    <button class="flex-1 bg-green-500 hover:bg-green-600 text-white rounded-lg py-2">
-      <i class="fa-solid fa-phone callBtn"></i>Call
+    <button class="flex-1 bg-green-500 hover:bg-green-600 text-white rounded-lg py-2 flex items-center justify-center gap-2 callBtn">
+      <i class="fa-solid fa-phone "></i>Call
     </button>
   </div>
   </div>
@@ -281,23 +281,23 @@
 
   <!-- Title + Subtitle -->
   <div class="mt-2">
-    <h3 class=" ServiceName font-bold text-gray-800">Brac Helpline</h3>
+    <h3 class=" serviceName font-bold text-gray-800">Brac Helpline</h3>
     <p class="text-sm text-gray-500">Brac </p>
   </div>
 
   <!-- Emergency Number -->
-  <p class="ServiceNumber text-3xl font-bold text-gray-900 mt-6">16445</p>
+  <p class="serviceNumber text-3xl font-bold text-gray-900 mt-6">16445</p>
 
   <!-- Tag -->
   <span class="bg-gray-100 text-gray-600 text-2  py-2  rounded-full mt-2 w-20 p-6 ">NGO</span>
 
   <!-- Buttons -->
   <div class="flex gap-4 mt-10">
-    <button class="flex-1 border border-gray-300 rounded-lg py-2 text-gray-700 hover:bg-gray-100">
+    <button class="flex-1 border border-gray-300 rounded-lg py-2 text-gray-700 hover:bg-gray-100 copyBtn">
       <i class="fa-solid fa-copy"></i> Copy
     </button>
-    <button class="flex-1 bg-green-500 hover:bg-green-600 text-white rounded-lg py-2">
-      <i class="fa-solid fa-phone callBtn"></i>Call
+    <button class="flex-1 bg-green-500 hover:bg-green-600 text-white rounded-lg py-2 flex items-center justify-center gap-2 callBtn">
+      <i class="fa-solid fa-phone "></i>Call
     </button>
   </div>
   </div>
@@ -313,23 +313,23 @@
 
   <!-- Title + Subtitle -->
   <div class="mt-2">
-    <h3 class=" ServiceName font-bold text-gray-800">Bangladesh Railway Helpline</h3>
+    <h3 class=" serviceName font-bold text-gray-800">Bangladesh Railway Helpline</h3>
     <p class="text-sm text-gray-500">Bangladesh Railway</p>
   </div>
 
   <!-- Emergency Number -->
-  <p class=" ServiceNumber text-3xl font-bold text-gray-900 mt-6">163</p>
+  <p class=" serviceNumber text-3xl font-bold text-gray-900 mt-6">163</p>
 
   <!-- Tag -->
   <span class="bg-gray-100 text-gray-600 text-2  py-2  rounded-full mt-2 w-[90px] p-6 ">Travel</span>
 
   <!-- Buttons -->
   <div class="flex gap-4 mt-10">
-    <button class="flex-1 border border-gray-300 rounded-lg py-2 text-gray-700 hover:bg-gray-100">
+    <button class="flex-1 border border-gray-300 rounded-lg py-2 text-gray-700 hover:bg-gray-100 copyBtn">
       <i class="fa-solid fa-copy"></i> Copy
     </button>
-    <button class="flex-1 bg-green-500 hover:bg-green-600 text-white rounded-lg py-2">
-      <i class="fa-solid fa-phone callBtn"></i>Call
+    <button class="flex-1 bg-green-500 hover:bg-green-600 text-white rounded-lg py-2 flex items-center justify-center gap-2 callBtn">
+      <i class="fa-solid fa-phone "></i>Call
     </button>
   </div>
   </div>
@@ -342,12 +342,13 @@
       <div class="flex justify-between items-center mb-3">
       <button class="text-lg font-bold ">
       <i class="fa-regular fa-clock"></i> Call History</button>
-      <ul id="callHistory"></ul>
+      
       
       <button id="clearHistory" class="bg-green-500 text-white px-3 py-1 rounded-full font-bold">Clear</button>
 </div>
-
+   <ul id="callHistory"></ul>
       </div>
+   
     </aside>
 
   </div>
