--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="flex items-center gap-4">
       <button class="bg-[#41FF6B1A]  text-black px-3 py-1 rounded-full flex gap-2 font-bold items-center"><span id="heartCount" >0</span><img src="./assets/heart.png " class="h-5 w-5"  alt=""></button>
       <button class="bg-[#41FF6B1A]  text-black px-3 py-1 rounded-full flex gap-2 font-bold  items-center "><span id="coinCount">100</span><img src="./assets/coin.png " class="h-5 w-5 "  alt=""></button>
-      <button class="bg-green-500 text-white px-3 py-1 rounded-full flex gap-2 font-bold items-center"> <span>0</span>Copy</button>
+      <button class="bg-green-500 text-white px-3 py-1 rounded-full flex gap-2 font-bold items-center"> <span id="copyCount">0</span>Copy</button>
     </div>
   </header>
 
